test/files/neg/plugin-after-terminal/lib/plugins.jar.desired.sha1
9cfbe4671146f4065e1992d61458f6ba4e7c3813 ?plugins.jar
